--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@react-native-community/picker": "^1.6.5",
     "@testing-library/jest-native": "^3.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-root-import": "^6.5.0",
     "cz-lean-changelog": "^0.0.2",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-testing-library": "^6.0.0",
