--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ]
   },
   "scripts": {
@@ -25,7 +26,10 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.5",
+    "@react-navigation/native": "^5.7.2",
+    "@react-navigation/stack": "^5.8.0",
     "@testing-library/jest-native": "^3.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-root-import": "^6.5.0",
@@ -35,6 +39,10 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.10.1",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
     "react-native-testing-library": "^6.0.0",
     "styled-components": "^5.1.1"
   },
