--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-root-import": "^6.5.0",
     "cz-lean-changelog": "^0.0.2",
+    "entities-decode": "^1.0.0",
+    "html-entities": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
